ui fixes regarding overflow on mobile

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,108 +1,112 @@
-.footer-container, .spacing-audit{
-    @include medium{
-        padding-left: 50px;
-        padding-right: 50px;
-    }
+.footer-container,
+.spacing-audit {
+  @include medium {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
 
-    background-color: $white;
-    padding-top: 30px;
-    
-    h3{
-        color: $black-theme;
-        font-size: 17px;
-        font-weight: 800;
+  background-color: $white;
+  padding-top: 30px;
+  overflow: hidden;
+
+  h3 {
+    color: $black-theme;
+    font-size: 17px;
+    font-weight: 800;
+    line-height: 18px;
+    margin-bottom: 17px;
+    margin-top: 20px;
+  }
+
+  .footer-group {
+    li.footer-item {
+      margin-bottom: 10px;
+      a {
+        color: rgba($black-theme-opacity, 0.8);
+        font-weight: 600;
+        font-size: 15px;
         line-height: 18px;
-        margin-bottom: 17px;
-        margin-top: 20px;
-    }
-
-    .footer-group{
-        li.footer-item {
-            margin-bottom: 10px;
-            a{
-                color: rgba($black-theme-opacity, .8);
-                font-weight: 600;
-                font-size: 15px;
-                line-height: 18px;
-            }
-            &.highlited{
-                a{
-                    color: $accent-red
-                }
-            }
+      }
+      &.highlited {
+        a {
+          color: $accent-red;
         }
+      }
     }
+  }
 
-    .social-list{
-        li{
-            width: 50px;
-            height: 50px;
-            margin-bottom: 5px;
-        }
+  .social-list {
+    li {
+      width: 50px;
+      height: 50px;
+      margin-bottom: 5px;
     }
+  }
 
-    .divider{
-        background: rgba($black-theme-opacity, .1);
-        height: 1px;
-        margin-left: -20px;
-        margin-right: -20px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+  .divider {
+    background: rgba($black-theme-opacity, 0.1);
+    height: 1px;
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .subfooter {
+    height: 70px;
+    align-items: center;
+    @include extra-small {
+      height: 133px;
     }
-
-    .subfooter{
-        height: 70px;
-        align-items: center;
-        // justify-content: space-between;
-        ul {
-            li{
-                width: 50%;
-                margin-right: 0;
-                margin-top: 5px;
-                margin-bottom: 5px;
-                @include medium{
-                    margin-right: 50px;
-                    width: auto;
-                }
-
-                a {
-                    color: $black-theme;
-                    font-size: 17px;
-                    font-weight: 800;
-                    line-height: 18px;
-                    margin-bottom: 17px;
-                }
-            }
+    ul {
+      li {
+        width: 50%;
+        margin-right: 0;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        @include medium {
+          margin-right: 50px;
+          width: auto;
         }
 
-        #list-wrapper {
-            @include extra-small {
-                margin-top: 10px;
-            }
+        a {
+          color: $black-theme;
+          font-size: 17px;
+          font-weight: 800;
+          line-height: 18px;
+          margin-bottom: 17px;
         }
-
-        .copyright{
-            p{
-                color: $text-gray-8b;
-                font-size: 11px;
-                font-weight: 400;
-                text-align: left;
-                @include medium{
-                    text-align: center;
-                    margin: auto;
-                    display: flex;
-                    justify-content: center;
-                    margin-left: 35px;
-                }
-
-                @include extra-small {
-                    margin-top: 5px;
-                }
-            }
-        }
+      }
     }
+
+    #list-wrapper {
+      @include extra-small {
+        margin-top: 10px;
+      }
+    }
+
+    .copyright {
+      p {
+        color: $text-gray-8b;
+        font-size: 11px;
+        font-weight: 400;
+        text-align: left;
+        @include medium {
+          text-align: center;
+          margin: auto;
+          display: flex;
+          justify-content: center;
+          margin-left: 35px;
+        }
+
+        @include extra-small {
+          margin-top: 5px;
+        }
+      }
+    }
+  }
 }
 
-.dark .footer-container{
-    background-color: $gray-39;
+.dark .footer-container {
+  background-color: $gray-39;
 }
